# chess_wasm

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  chess_wasm.code-workspace  readme.md
apps/web/src/: App.vue  main.ts
apps/web/src/components/: RookMoves.vue
apps/web/src/components/icons/pieces/: BlackBishopIcon.vue  BlackKingIcon.vue  BlackKnightIcon.vue  BlackPawnIcon.vue  BlackQueenIcon.vue  BlackRookIcon.vue  EmptyPieceIcon.vue  WhiteBishopIcon.vue  WhiteKingIcon.vue  WhiteKnightIcon.vue  WhitePawnIcon.vue  WhiteQueenIcon.vue  WhiteRookIcon.vue
apps/web/src/stores/: chess.ts
apps/web/src/types/: piece.type.ts
apps/web/src/views/: BoardView.vue
apps/web/src/wasm/: libchess.d.ts  libchess.js  libchess.wasm
bindings/native/: CMakeLists.txt
bindings/wasm/: CMakeLists.txt  bindings.cpp
cmake/toolchains/: emscripten.cmake  native.cmake
libs/chess-core/: CMakeLists.txt
libs/chess-core/include/: board.h  chess.h  constants.h
libs/chess-core/src/: board.cpp  chess.cpp
scripts/: build_native.sh  build_wasm.sh
